refactor: remove validity times from observation schemas
